<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_main"
        android:icon="@mipmap/ic_view_list"
        android:title="@string/main"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_create_meetup"
        android:icon="@mipmap/ic_plus"
        android:title="@string/create_meetup"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile"
        android:icon="@mipmap/ic_account"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sign_out"
        android:icon="@mipmap/ic_logout"
        android:title="@string/sign_out"
        app:showAsAction="ifRoom" />

</menu>